# clowder

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: auto-update-and-signing.md
scripts/: build-icon.py  install-hooks.ps1  install-hooks.sh  install-sprites.py
src/: About.css  About.tsx  App.css  App.tsx  Bubble.css  Bubble.tsx  main.tsx  sprite-offsets.json  types.ts
src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hook_install.rs  lib.rs  main.rs  notify_icon_cleanup.rs  watcher.rs
src/components/: Cat.tsx
src/hooks/: useSessions.ts
